// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Row correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Row with maxColumns correctly 1`] = `
<div
  data-radium={true}
>
  <div
    data-radium={true}
  >
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-c267bcb0 rmq-b48441e7 rmq-d5a064a8 rmq-34523c83"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-619c6b1f rmq-5eb2cae8 rmq-ff086e27 rmq-ed9f7dcc"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-d8c2f4b5 rmq-10dadc02 rmq-bcb6a2cd rmq-e13cf8e6"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-1d72a456 rmq-b5cf281 rmq-1fe90cce rmq-401bf6a5"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-fe442532 rmq-5f85e825 rmq-e0b3cd6a rmq-60029241"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-de89f215 rmq-724c3422 rmq-c4ec9eed rmq-719c7e86"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-29d2992f rmq-169eeae0 rmq-8d2d9a4b"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-d56a9d4b rmq-df42e904 rmq-e3706aef"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-712dba81 rmq-bd40842a"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-bb094df8 rmq-93bd0d53"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-65d59bb6"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-62f5bd19"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "display": "block",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-c267bcb0{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-b48441e7{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-d5a064a8{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-34523c83{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-619c6b1f{width: 208px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-5eb2cae8{width: 208px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-ff086e27{width: 208px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-ed9f7dcc{width: 208px !important;
margin: 0 auto !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-d8c2f4b5{width: 312px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-10dadc02{width: 312px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-bcb6a2cd{width: 312px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-e13cf8e6{width: 312px !important;
margin: 0 auto !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-1d72a456{width: 416px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-b5cf281{width: 416px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-1fe90cce{width: 416px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-401bf6a5{width: 416px !important;
margin: 0 auto !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-fe442532{width: 520px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-5f85e825{width: 520px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-e0b3cd6a{width: 520px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-60029241{width: 520px !important;
margin: 0 auto !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-de89f215{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-724c3422{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-c4ec9eed{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-719c7e86{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-29d2992f{width: 728px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-169eeae0{width: 728px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-8d2d9a4b{width: 728px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-d56a9d4b{width: 832px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-df42e904{width: 832px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-e3706aef{width: 832px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-712dba81{width: 936px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-bd40842a{width: 936px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-bb094df8{width: 1040px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-93bd0d53{width: 1040px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-65d59bb6{width: 1144px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-62f5bd19{width: 1248px !important;
margin: 0 auto !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Row with styles and maxColumns passed in correctly 1`] = `
<div
  data-radium={true}
>
  <div
    data-radium={true}
  >
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-c267bcb0 rmq-b48441e7 rmq-d5a064a8 rmq-34523c83"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "display": "block",
          "width": "100%",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-de89f215 rmq-724c3422 rmq-c4ec9eed rmq-719c7e86"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "display": "block",
          "width": "100%",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-bb094df8 rmq-93bd0d53"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-c267bcb0{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-b48441e7{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-d5a064a8{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-34523c83{width: 104px !important;
margin: 0 auto !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-de89f215{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-724c3422{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-c4ec9eed{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-719c7e86{width: 624px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-bb094df8{width: 1040px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-93bd0d53{width: 1040px !important;
margin: 0 auto !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Row with styles passed in correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Row with styles, maxColumns and forceFullPage passed in correctly 1`] = `
<div
  data-radium={true}
>
  <div
    data-radium={true}
  >
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-d56a9d4b rmq-df42e904 rmq-e3706aef rmq-e3940d63 rmq-3eba0fa5 rmq-4794023d rmq-3cc881d6 rmq-902176d3 rmq-9a0c63b1"
      data-radium={true}
      style={
        Object {
          "display": "block",
          "justifyContent": "center",
          "width": "100vw",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-e3940d63 rmq-3eba0fa5 rmq-4794023d rmq-90efeef6 rmq-7d240233 rmq-49dba7f1"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "display": "block",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    />
    <div
      className="rmq-136ec809 rmq-816a7dd1 rmq-b3aaa63a rmq-2e8763ff rmq-7dcad03d rmq-bb094df8 rmq-93bd0d53 rmq-e3940d63 rmq-3eba0fa5 rmq-4794023d rmq-90efeef6 rmq-902176d3 rmq-9a0c63b1"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "display": "block",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-d56a9d4b{width: 832px !important;
margin: 0 auto !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-df42e904{width: 832px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-e3706aef{width: 832px !important;
margin: 0 auto !important;}}
@media (max-width: 767px){ .rmq-e3940d63{display: block !important;
margin: 0 calc(-1 * (100vw - undefinedpx) / 2) !important;}}
@media (min-width: 768px) and (max-width: 831px) { .rmq-3eba0fa5{display: block !important;
margin: 0 calc(-1 * (100vw - 624px) / 2) !important;}}
@media (min-width: 832px) and (max-width: 1039px) { .rmq-4794023d{display: block !important;
margin: 0 calc(-1 * (100vw - 832px) / 2) !important;}}
@media (min-width: 1040px) and (max-width: 1247px)  { .rmq-3cc881d6{display: block !important;
margin: 0 calc(-1 * (100vw - 1040px) / 2) !important;}}
@media (min-width: 1248px) and (max-width: 1455px)  { .rmq-902176d3{display: block !important;
margin: 0 calc(-1 * (100vw - 1248px) / 2) !important;}}
@media (min-width: 1456px)  { .rmq-9a0c63b1{display: block !important;
margin: 0 calc(-1 * (100vw - 1456px) / 2) !important;}}
@media (min-width: 1040px) and (max-width: 1247px) { .rmq-90efeef6{display: block !important;
margin: 0 calc(-1 * (100vw - 1040px) / 2) !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-7d240233{display: block !important;
margin: 0 calc(-1 * (100vw - 1248px) / 2) !important;}}
@media (min-width: 1456px) { .rmq-49dba7f1{display: block !important;
margin: 0 calc(-1 * (100vw - 1456px) / 2) !important;}}
@media (min-width: 1248px) and (max-width: 1455px) { .rmq-bb094df8{width: 1040px !important;
margin: 0 auto !important;}}
@media (min-width: 1456px) { .rmq-93bd0d53{width: 1040px !important;
margin: 0 auto !important;}}",
      }
    }
  />
</div>
`;
